<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:layout_margin="@dimen/dim10"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim10"
        android:background="@drawable/et_bg"
        android:layout_marginBottom="@dimen/dim5"
        android:maxLines="1"
        android:lines="1"
        android:inputType="text"
        android:hint="@string/enterName"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim10"
        android:maxLines="1"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_bg"
        android:layout_marginBottom="@dimen/dim5"
        android:hint="@string/enterEmail"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim10"
        android:background="@drawable/et_bg"
        android:maxLines="1"
        android:lines="1"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/dim25"
        android:hint="@string/enterPassword"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dim10"
            android:text="@string/selectGender"/>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rgBtnGender"
            android:layout_weight="2"
            android:checkedButton="@+id/rgGender"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rBtnMale"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rBtnFemail"
                android:text="@string/female" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rBtnOthers"
                android:text="@string/others" />

        </RadioGroup>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dim10"
            android:text="@string/selectType"/>

        <Spinner
            android:id="@+id/spType"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="@drawable/custom_spinner_background"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/chkPastBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveInfo"
        android:layout_marginBottom="@dimen/dim50"
        android:textSize="@dimen/textSize20"
        android:checked="true" />


    <TextView
        android:id="@+id/btnTextReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim10"
        android:layout_marginBottom="@dimen/dim10"
        android:background="@drawable/tv_bg"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/btnRegistration"/>

    <TextView
        android:id="@+id/btnTexLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim10"
        android:background="@drawable/tv_bg"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/btnLogin"/>


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim25"
        android:textSize="@dimen/textSize15"
        />


</LinearLayout>
